syntax = "proto3";


import "auth/auth.proto";

message AuthReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  optional Auth payload = 4;
}

message AuthListDataReply {
  repeated Auth auth_list = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message AuthListReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  AuthListDataReply payload = 4;
}
